codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__running_workflow_command_uses_standard_task_status.snap
---
source: tui/src/chatwidget/tests/workflows__slash_commands.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
