codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_codex_guide.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Codex mode enabled. Investigating read-only; scratch workspace is
  <codex-config-workspace>. Use /codex off to leave.
