codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workflow_custom_output_limit_truncation_notice.snap
---
source: tui/src/chatwidget/tests/workflows__slash_commands.rs
expression: "lines_to_single_string(&cells[0])"
---
• # Workflow report
  
  Partial output.
  
  [Workflow output truncated to 128 bytes.]
